# kleidiai

./: .editorconfig  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  helper.S  run.sh
benchmark/: CMakeLists.txt  README.md  main.cpp
benchmark/dwconv/: dwconv_interface.hpp  dwconv_registry.cpp  dwconv_runner.hpp
benchmark/imatmul/: imatmul_registry.cpp
benchmark/matmul/: matmul_benchmark_logic.hpp  matmul_interface.hpp  matmul_registry.cpp  matmul_runner.hpp
benchmark/pack_matmul/: pack_matmul_benchmark_logic.hpp  pack_matmul_interface.hpp  pack_matmul_registry.cpp  pack_matmul_registry.hpp  pack_matmul_runner.hpp
examples/matmul_clamp_qai8_qai8p_qsi8cxp_sme2p1/: CMakeLists.txt  kai_kernel_matmul_clamp_qai8_qai8p4vsx4_qsi8cxp4vsx4sf32bi32_2vsx32vs_sme2p1_mop4a.h  kai_matmul_clamp_qai8_qai8p4vsx4_qsi8cxp4vsx4sf32bi32_2vsx32vs_sme2p1_mop4a_asm.S  matmul_clamp_qai8_qai8p_qsi8cxp_sme2p1.cpp  matmul_clamp_qai8_qai8p_qsi8cxp_sme2p1_benchmark.cpp
experimental/ops/: .cmake-format.py  .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets.json.license  DEVELOPMENT.md  README.md
experimental/ops/benchmark/: CMakeLists.txt  gemm.cpp
experimental/ops/benchmark/src/: barrier.hpp  cache_stats.hpp  depthwise_wrapper.hpp  file_dumper.cpp  gemm-wrappers.hpp  gemm_bf16_new.cpp  gemm_lib.hpp  gemm_s16.cpp  gemm_s8.cpp  gemm_transpose.hpp  gemm_u16.cpp  gemm_u8.cpp  gemm_u8s8.cpp  hgemm_new.cpp  kai_ops_kernels.hpp  kai_ops_wrapper.hpp  memory_allocator.cpp  misc.cpp  perf.cpp  scheduler.cpp  scheduler.hpp  sgemm_new.cpp  test_suite.cpp  utils.hpp  version.cpp.in  winograd_wrapper.hpp
experimental/ops/cmake/: KleidiAIOpsCheckOptions.cmake  KleidiAIOpsConfig.cmake.in  KleidiAIOpsGetGitInfo.cmake  KleidiAIOpsInstallProject.cmake  KleidiAIOpsSetup.cmake
experimental/ops/include/kai/ops/: bfloat.hpp  newgemm_lib.hpp  perf.hpp  profiler.hpp
experimental/ops/kai/ops/: CMakeLists.txt
experimental/ops/kai/ops/common_internal/: quantized.hpp  utils.hpp
experimental/ops/kai/ops/conv/: CMakeLists.txt  addressing.cpp  addressing.hpp
experimental/ops/kai/ops/gemm/: CMakeLists.txt  asmlib.hpp  bias_adder.hpp  convolver.hpp  gemm_bf16.cpp  gemm_bf16bf16.cpp  gemm_fp16.cpp  gemm_fp16fp32.cpp  gemm_fp32.cpp  gemm_hybrid.hpp  gemm_hybrid_indirect.hpp  gemm_hybrid_quantized.hpp  gemm_implementation.hpp  gemm_int16.cpp  gemm_int8.cpp  gemm_interleaved.hpp  gemm_q8_mixed.cpp  gemm_qint8.cpp  gemm_quint8.cpp  gemm_s8fp16.cpp  gemm_s8fp32.cpp  gemm_u8s8fp32.cpp  gemm_uint16.cpp  gemm_uint8.cpp  gemv_batched.hpp  gemv_pretransposed.hpp  interleave-8way.cpp  interleave_indirect-sve.cpp  interleave_indirect.cpp  interleave_indirect.hpp  interleave_indirect_impl.hpp  (+19 more)
experimental/ops/scripts/: soak-full.py
experimental/ops/tests/configs/: REUSE.toml  conv_tests.cfg  depthwise_tests.cfg  gemm_tests.cfg
experimental/ops/toolchains/cross/: cross-android-arm64-v8a.cmake  cross-baremetal-aarch64-elf.cmake  cross-baremetal-arm-eabi.cmake  cross-linux-aarch64-gnu.cmake  cross-linux-arm-gnueabihf.cmake
experimental/ops/toolchains/native/: native-linux-aarch64-gnu.cmake  native-macos-aarch64-clang.cmake
kai/ukernels/dwconv/: BUILD.bazel  README.md
kai/ukernels/dwconv/dwconv_f16_f16_f16p/: kai_dwconv_clamp_f16_f16_f16p1vlx1b_3x3_s1_4x4_qmx_mla.c  kai_dwconv_clamp_f16_f16_f16p1vlx1b_3x3_s1_4x4_qmx_mla.h  kai_dwconv_clamp_f16_f16_f16p1vlx1b_3x3_s1_4x4_qmx_mla_asm.S  kai_dwconv_clamp_f16_f16_f16p1vlx1b_3x3_s1_4x4_sme2_mla.c  kai_dwconv_clamp_f16_f16_f16p1vlx1b_3x3_s1_4x4_sme2_mla.h  kai_dwconv_clamp_f16_f16_f16p1vlx1b_3x3_s1_4x4_sme2_mla_asm.S  kai_dwconv_clamp_f16_f16_f16p_interface.h
kai/ukernels/dwconv/dwconv_f32_f32_f32p/: kai_dwconv_clamp_f32_f32_f32p1vlx1b_3x3_s1_4xc_qmx_mla.c  kai_dwconv_clamp_f32_f32_f32p1vlx1b_3x3_s1_4xc_qmx_mla.h  kai_dwconv_clamp_f32_f32_f32p1vlx1b_3x3_s1_4xc_qmx_mla_asm.S
kai/ukernels/dwconv/pack/: kai_rhs_dwconv_pack_x16p1vlx1b_x16_x16_sme.c  kai_rhs_dwconv_pack_x16p1vlx1b_x16_x16_sme.h
test/: BUILD.bazel  CMakeLists.txt
test/common/: buffer.cpp  buffer.hpp  compare.cpp  cpu_info.cpp  cpu_info.hpp  data_type.cpp  data_type.hpp  enum_utils.hpp  int4.cpp  matmul_test_common.cpp  matmul_test_common.hpp  matrix_portion.cpp  memory.cpp  memory.hpp  printer.cpp  range.hpp  round.cpp  seed.cpp  sme.cpp  sme.hpp  test_suite.hpp
test/nextgen/: main.cpp
test/nextgen/format/: block2d_row_format.cpp  block2d_row_format.hpp  fill.hpp  format.hpp  plain_format.cpp  plain_format.hpp
test/nextgen/harness/: tensor.hpp
test/nextgen/operators/matmul/: matmul_bias_mode.cpp  matmul_bias_mode.hpp  matmul_config.hpp  matmul_dims.hpp  matmul_operator.cpp  matmul_operator.hpp  matmul_slots.hpp  matmul_tb.cpp  matmul_tb.hpp
test/nextgen/quantization/: asymm_linear_quantizer.cpp  asymm_linear_quantizer.hpp  quantizer.hpp  symm_linear_quantizer.cpp  symm_linear_quantizer.hpp
test/nextgen/reference/: binary_elementwise.cpp  binary_elementwise.hpp  clamp.cpp  clamp.hpp  compare.cpp  matmul.cpp  matmul.hpp  pack.cpp  print.cpp  unary_elementwise.cpp
test/nextgen/tests/: matmul_test_next.cpp
test/reference/: cast.cpp  clamp.cpp  clamp.hpp  dwconv.cpp  fill.cpp  fill.hpp  matmul.cpp  matmul.hpp  pack.cpp  quantize.cpp
test/tests/: buffer_test.cpp  clamp_hard_test.cpp  dwconv_test.cpp  imatmul_test.cpp  matmul_clamp_bf16_qai8dxp_qsi4cxp_test.cpp  matmul_clamp_f16_bf16p_bf16p_test.cpp  matmul_clamp_f16_qai8dxp_qsi4cxp_test.cpp  matmul_clamp_f16_qai8dxp_qsi8cxp_test.cpp  matmul_clamp_f16_qsi8d32p_qai4c32p_test.cpp  matmul_clamp_f32_bf16p_bf16p_test.cpp  matmul_clamp_f32_f16p_qsi4c32p_test.cpp  matmul_clamp_f32_f32_f32p_test.cpp  matmul_clamp_f32_qai8dxp_qsi4c32p_test.cpp  matmul_clamp_f32_qai8dxp_qsi4cxp_test.cpp  matmul_clamp_f32_qai8dxp_qsi8cxp_test.cpp  matmul_clamp_f32_qai8dxp_qsu2cxp_test.cpp  matmul_clamp_f32_qsi8d32p_qai4c32p_test.cpp  matmul_clamp_f32_qsi8d32p_qsi4c32p_test.cpp  matmul_clamp_qai8_qai8p_qsi8cxp_test.cpp  matmul_clamp_qai8dxp_qsi4c32p_test.cpp  matmul_test.cpp
(+1281 files in other folders)
